--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
     "typescript": "^4.5.5"
   },
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "@supabase/supabase-js": "^1.29.4"
+  }
 }
